[gd_scene load_steps=4 format=2]

[ext_resource path="res://App.gd" type="Script" id=1]
[ext_resource path="res://Game/Game.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/Menu.tscn" type="PackedScene" id=3]

[node name="App" type="Node"]
script = ExtResource( 1 )

[node name="Game" parent="." instance=ExtResource( 2 )]

[node name="Menus" type="CanvasLayer" parent="."]
layer = 10

[node name="Menu" parent="Menus" instance=ExtResource( 3 )]

[connection signal="ended" from="Game" to="." method="_on_Game_ended"]
[connection signal="menu_pressed" from="Game" to="." method="_on_Game_menu_pressed"]
[connection signal="replay_pressed" from="Menus/Menu" to="." method="_on_GameMenu_replay_pressed"]
